--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,27 @@
 <resources>
-    <!--Welcome page-->
+    <!-- General -->
+    <string name="action_settings">Settings</string>
+
+    <!-- Welcome page -->
     <string name="app_name">Boredom Buster</string>
     <string name="welcome">Looking for something to do today? We\'ll ask you a couple of questions and then give you some fun ideas that fit your budget, time of day and group size.</string>
     <string name="to_begin">Tap \"Get Started\" to begin.</string>
     <string name="get_started">Get Started</string>
 
     <!--Selection-->
+    <string name="title_activity_selection">Selection</string>
     <string name="budget">"What's your budget?"</string>
     <string name="time">"What time of day?"</string>
     <string name="group_size">"How many people in group?"</string>
-    <string name="plus">+</string>
 
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_selection">Selection</string>
+    <!-- Results -->
     <string name="title_activity_results">Results</string>
+    <string name="morn_results_title">Morning Activities</string>
+    <string name="aft_results_title">Afternoon Activities</string>
+    <string name="eve_results_title">Evening Activities</string>
+    <string name="plus">+</string>
+    <string name="replace">X</string>
+    <string name="error_message">Oops! There were no results found. Go back and try a different search.</string>
+
+
 </resources>
